@@ -19,6 +19,7 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -32,7 +33,6 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import org.apache.commons.io.FileUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import tools.jackson.databind.JsonNode;
@@ -324,8 +324,7 @@ public final class BundleValidationUtil {
         if (packageJsonFile.exists()) {
             try {
                 final ObjectNode packageJson = JacksonUtils
-                        .readTree(FileUtils.readFileToString(packageJsonFile,
-                                StandardCharsets.UTF_8));
+                        .readTree(Files.readString(packageJsonFile.toPath()));
                 cleanOldPlatformDependencies(packageJson);
                 return getDefaultPackageJson(options, frontendDependencies,
                         packageJson);
@@ -718,8 +717,9 @@ public final class BundleValidationUtil {
                 getLogger().info("No file found for '{}'", projectImport);
                 return false;
             }
-            String frontendFileContent = FileUtils
-                    .readFileToString(frontendFile, StandardCharsets.UTF_8);
+
+            String frontendFileContent = Files
+                    .readString(frontendFile.toPath());
             compareFrontendHashes(frontendHashes, faultyContent, projectImport,
                     frontendFileContent);
         }
@@ -752,8 +752,7 @@ public final class BundleValidationUtil {
         if (indexHtml.exists()) {
             final JsonNode frontendHashes = statsJson
                     .get(FRONTEND_HASHES_STATS_KEY);
-            String frontendFileContent = FileUtils.readFileToString(indexHtml,
-                    StandardCharsets.UTF_8);
+            String frontendFileContent = Files.readString(indexHtml.toPath());
             List<String> faultyContent = new ArrayList<>();
             compareFrontendHashes(frontendHashes, faultyContent,
                     FrontendUtils.INDEX_HTML, frontendFileContent);
@@ -865,8 +864,7 @@ public final class BundleValidationUtil {
                 File frontendFile = new File(frontendDirectory, filePath);
                 if (frontendFile.exists()) {
                     final String hash = calculateHash(
-                            FileUtils.readFileToString(frontendFile,
-                                    StandardCharsets.UTF_8));
+                            Files.readString(frontendFile.toPath()));
                     if (!expectedHash.equals(hash)) {
                         changed.add(filePath);
                     }
@@ -973,15 +971,14 @@ public final class BundleValidationUtil {
             return true;
         }
         try {
-            String content = FileUtils.readFileToString(needsBuildFile,
-                    StandardCharsets.UTF_8.name());
+            String content = Files.readString(needsBuildFile.toPath());
             return Boolean.parseBoolean(content);
         } catch (IOException e) {
             getLogger().error(
                     "Failed to read re-bundle checker result from file", e);
             return true;
         } finally {
-            FileUtils.deleteQuietly(needsBuildFile);
+            FileIOUtils.deleteFileQuietly(needsBuildFile);
         }
     }
 
@@ -991,10 +988,10 @@ public final class BundleValidationUtil {
                 Constants.NEEDS_BUNDLE_BUILD_FILE);
         File targetDir = needsBuildFile.getParentFile();
         if (!targetDir.exists()) {
-            FileUtils.forceMkdir(targetDir);
+            targetDir.mkdirs();
         }
-        FileUtils.write(needsBuildFile, Boolean.toString(needsBundle),
-                StandardCharsets.UTF_8.name());
+        Files.writeString(needsBuildFile.toPath(),
+                Boolean.toString(needsBundle));
     }
 
     private static Logger getLogger() {
